--- a/templates/about.page.html
+++ b/templates/about.page.html
@@ -6,6 +6,7 @@
     <div class="col">
       <h1>About Page</h1>
       <p>About page contents</p>
+      <p>This came from the template: {{index .StringMap "test"}}</p>
     </div>
   </div>
 </div>
