--- a/templates/about.page.html
+++ b/templates/about.page.html
@@ -7,6 +7,14 @@
       <h1>About Page</h1>
       <p>About page contents</p>
       <p>This came from the template: {{index .StringMap "test"}}</p>
+      <p>
+        {{if ne (index .StringMap "remote_ip") ""}}
+        Your remote IP address is {{index .StringMap "remote_ip"}}
+        {{else}}
+        I don't know your IP address yet. Visit the <a href="/">Home Page</a> so
+        I can set it.
+        {{end}}
+      </p>
     </div>
   </div>
 </div>
